Second Line added

--- a/Template.ipynb
+++ b/Template.ipynb
@@ -6,7 +6,7 @@
       "name": "Intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN5C/asIeWUI1msYZ3w8EYA",
+      "authorship_tag": "ABX9TyMtPgDcVFxxBe9Opl5GxpHK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AmaSoftware/Intro2Pandas/blob/master/Templateipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AmaSoftware/Intro2Pandas/blob/master/Template.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,17 +34,42 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "1b9284b1-61fa-4de0-e3d3-5f31f795d6db"
+        "outputId": "b7406944-30d8-4418-bcbd-fad89b3389aa"
       },
       "source": [
         "print('Time to start the journey')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Time to start the journey\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8i0MywbyGxTz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2130f4a7-72b7-49d2-93f3-bb599d428f1f"
+      },
+      "source": [
+        "print('Hello from Colab')"
       ],
       "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Time to start the journey\n"
+            "Hello from Colab\n"
           ],
           "name": "stdout"
         }
